--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zia"
-version = "0.1.3"
+version = "0.1.4"
 description = "Zscaler Internet Access CLI"
 readme = "README.md"
 authors = ["omitroom13"]
@@ -13,6 +13,7 @@ python = "^3.8"
 requests = "^2.24.0"
 PyYAML = "^5.3.1"
 fire = "^0.3.1"
+isodate = "^0.6.0"
 
 [tool.poetry.scripts]
 zia = "zia.__main__:main"
